# libopenvizsla

./: .appveyor.yml  .clang-format  CMakeLists.txt  LICENSE.ovextcap  README.md  openvizsla.pc.in  ov3.fwpkg
.github/workflows/: cmake.yml  codeql.yml
cmake/: FindCheck.cmake  FindLibUSB1.cmake  FindLibZip.cmake
include/: bit.h  cha.h  chb.h  decoder.h  fwpkg.h  openvizsla.h  ov.h  reg.h
src/: bit.c  cha.c  chb.c  decoder.c  fwpkg.c  fwpkg.rc  ov.c  reg.c  reg.gperf
test/: bit.c  decoder.c  fwpkg.c  reg.c
tools/load/: main.c
tools/ovextcap/: main.c
tools/sample/: main.c
